# pico-robot

./: CMakeLists.txt  README.md  config.h.in  import.cmake
include/board/: led.h  temperature.h
include/kinematics/: common.h  differentialdrive.h
include/math/: random.h  units.h  vectors.h
include/math/gcem/: abs.hpp  cos.hpp  floor.hpp  gcem_options.hpp  is_finite.hpp  is_inf.hpp  is_nan.hpp  is_odd.hpp  pow_integral.hpp  sgn.hpp  sin.hpp  sqrt.hpp  tan.hpp
include/packets/: serializedpacket.h
include/packets/control/: xbox.h
src/board/: led.cpp  ledw.cpp  temperature.cpp
src/kinematics/: differentialdrive.cpp
src/math/: random.cpp
src/packets/: serializedpacket.cpp
src/packets/control/: xbox.cpp
